deploy-k8s/namespace-sample.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sekai
  labels:
    app.kubernetes.io/name: sekai
    app.kubernetes.io/part-of: sekai
